# RepoLens

./: CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  VERIFICATION_REPORT.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  api.py  main.py  models.py
backend/app/core/: config.py
backend/app/services/: cache.py  evidence_collector.py  git_runner.py  intent.py  llm.py  metrics.py  repo_validate.py  report.py  timeline.py
backend/app/static/: index.html
backend/app/tests/: conftest.py  test_e2e.py  test_git_runner.py  test_repo_validate.py
